next-app/src/app/globals.scss
@import "@styles/variables.scss";

:root {
  --toastify-color-light: #f5f5f5;
  --toastify-color-dark: #2f3030;
  --toastify-text-color-light: #656867;
  --toastify-text-color-dark: #fff;
  --toastify-icon-color-success: #30d158;
}

*,
*::after,
*::before {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html,
body {
  scroll-behavior: smooth;
}

body {
  width: 100%;
  min-height: 100vh;
  transition: all 0.2s linear;
  z-index: 1;
  display: flex;
  flex-direction: column;
}

main {
  width: 100%;
  padding: 120px 24px;
  display: flex;
  flex-direction: column;
  gap: 40px;
}

h1,
h2,
h3 {
  color: $black;
  font-weight: 600;
}

h1 {
  font-size: 40px;
  line-height: 120%;
}

h2 {
  font-size: 24px;
  line-height: 100%;
}

h3 {
  font-size: 16px;
  line-height: 150%;
}

p {
  font-weight: 500;
  font-size: 16px;
  line-height: 150%;
  color: $grey;
}

a {
  text-decoration: none;
}

.text {
  color: $grey;
}

.content {
  width: 100%;
  display: flex;
  flex-direction: column;
}

.section {
  width: 100%;
  max-width: 768px;
  overflow: hidden;
  margin: 0 auto;
}

.black-white {
  color: $black;
}

.dark {
  h1,
  h2,
  h3 {
    color: $white;
  }

  p,
  .text {
    color: $grey-light;
  }

  .black-white {
    color: $white;
  }
}

@media screen and (min-width: $desktop) {
  body {
    flex-direction: row;
  }

  main {
    padding: 120px 0px;
  }

}

